--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -35,11 +35,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wholesale customers dataset has 440 samples with 6 features each.\n"
+     ]
+    }
+   ],
    "source": [
     "# Import libraries necessary for this project\n",
     "import numpy as np\n",
@@ -73,14 +81,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fresh</th>\n",
+       "      <th>Milk</th>\n",
+       "      <th>Grocery</th>\n",
+       "      <th>Frozen</th>\n",
+       "      <th>Detergents_Paper</th>\n",
+       "      <th>Delicatessen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>440.00</td>\n",
+       "      <td>440.00</td>\n",
+       "      <td>440.00</td>\n",
+       "      <td>440.00</td>\n",
+       "      <td>440.00</td>\n",
+       "      <td>440.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>12000.30</td>\n",
+       "      <td>5796.27</td>\n",
+       "      <td>7951.28</td>\n",
+       "      <td>3071.93</td>\n",
+       "      <td>2881.49</td>\n",
+       "      <td>1524.87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>12647.33</td>\n",
+       "      <td>7380.38</td>\n",
+       "      <td>9503.16</td>\n",
+       "      <td>4854.67</td>\n",
+       "      <td>4767.85</td>\n",
+       "      <td>2820.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>3.00</td>\n",
+       "      <td>55.00</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>25.00</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>3.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>3127.75</td>\n",
+       "      <td>1533.00</td>\n",
+       "      <td>2153.00</td>\n",
+       "      <td>742.25</td>\n",
+       "      <td>256.75</td>\n",
+       "      <td>408.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>8504.00</td>\n",
+       "      <td>3627.00</td>\n",
+       "      <td>4755.50</td>\n",
+       "      <td>1526.00</td>\n",
+       "      <td>816.50</td>\n",
+       "      <td>965.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>16933.75</td>\n",
+       "      <td>7190.25</td>\n",
+       "      <td>10655.75</td>\n",
+       "      <td>3554.25</td>\n",
+       "      <td>3922.00</td>\n",
+       "      <td>1820.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>112151.00</td>\n",
+       "      <td>73498.00</td>\n",
+       "      <td>92780.00</td>\n",
+       "      <td>60869.00</td>\n",
+       "      <td>40827.00</td>\n",
+       "      <td>47943.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fresh</th>\n",
+       "      <th>Milk</th>\n",
+       "      <th>Grocery</th>\n",
+       "      <th>Frozen</th>\n",
+       "      <th>Detergents_Paper</th>\n",
+       "      <th>Delicatessen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>440.00</td>\n",
+       "      <td>440.00</td>\n",
+       "      <td>440.00</td>\n",
+       "      <td>440.00</td>\n",
+       "      <td>440.00</td>\n",
+       "      <td>440.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>12000.30</td>\n",
+       "      <td>5796.27</td>\n",
+       "      <td>7951.28</td>\n",
+       "      <td>3071.93</td>\n",
+       "      <td>2881.49</td>\n",
+       "      <td>1524.87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>12647.33</td>\n",
+       "      <td>7380.38</td>\n",
+       "      <td>9503.16</td>\n",
+       "      <td>4854.67</td>\n",
+       "      <td>4767.85</td>\n",
+       "      <td>2820.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>3.00</td>\n",
+       "      <td>55.00</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>25.00</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>3.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>3127.75</td>\n",
+       "      <td>1533.00</td>\n",
+       "      <td>2153.00</td>\n",
+       "      <td>742.25</td>\n",
+       "      <td>256.75</td>\n",
+       "      <td>408.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>8504.00</td>\n",
+       "      <td>3627.00</td>\n",
+       "      <td>4755.50</td>\n",
+       "      <td>1526.00</td>\n",
+       "      <td>816.50</td>\n",
+       "      <td>965.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>16933.75</td>\n",
+       "      <td>7190.25</td>\n",
+       "      <td>10655.75</td>\n",
+       "      <td>3554.25</td>\n",
+       "      <td>3922.00</td>\n",
+       "      <td>1820.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>112151.00</td>\n",
+       "      <td>73498.00</td>\n",
+       "      <td>92780.00</td>\n",
+       "      <td>60869.00</td>\n",
+       "      <td>40827.00</td>\n",
+       "      <td>47943.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 0,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Display a description of the dataset\n",
-    "display(data.describe())"
+    "display(data.describe().round(decimals=2, out=None))"
    ]
   },
   {
@@ -93,14 +291,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chosen samples of wholesale customers dataset:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fresh</th>\n",
+       "      <th>Milk</th>\n",
+       "      <th>Grocery</th>\n",
+       "      <th>Frozen</th>\n",
+       "      <th>Detergents_Paper</th>\n",
+       "      <th>Delicatessen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>16117</td>\n",
+       "      <td>46197</td>\n",
+       "      <td>92780</td>\n",
+       "      <td>1026</td>\n",
+       "      <td>40827</td>\n",
+       "      <td>2944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>76237</td>\n",
+       "      <td>3473</td>\n",
+       "      <td>7102</td>\n",
+       "      <td>16538</td>\n",
+       "      <td>778</td>\n",
+       "      <td>918</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6373</td>\n",
+       "      <td>780</td>\n",
+       "      <td>950</td>\n",
+       "      <td>878</td>\n",
+       "      <td>288</td>\n",
+       "      <td>285</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fresh</th>\n",
+       "      <th>Milk</th>\n",
+       "      <th>Grocery</th>\n",
+       "      <th>Frozen</th>\n",
+       "      <th>Detergents_Paper</th>\n",
+       "      <th>Delicatessen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>16117</td>\n",
+       "      <td>46197</td>\n",
+       "      <td>92780</td>\n",
+       "      <td>1026</td>\n",
+       "      <td>40827</td>\n",
+       "      <td>2944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>76237</td>\n",
+       "      <td>3473</td>\n",
+       "      <td>7102</td>\n",
+       "      <td>16538</td>\n",
+       "      <td>778</td>\n",
+       "      <td>918</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6373</td>\n",
+       "      <td>780</td>\n",
+       "      <td>950</td>\n",
+       "      <td>878</td>\n",
+       "      <td>288</td>\n",
+       "      <td>285</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 0,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# TODO: Select three indices of your choice you wish to sample from the dataset\n",
-    "indices = []\n",
+    "indices = [85,125,206]\n",
     "\n",
     "# Create a DataFrame of the chosen samples\n",
     "samples = pd.DataFrame(data.loc[indices], columns = data.keys()).reset_index(drop = True)\n",
@@ -122,7 +427,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "Number 0 could be a Supermarket because it has above average and very high spending for Fresh, Milk, Grocery, Detergents Paper and Delicatessen category.\n",
+    "\n",
+    "Number 1 could be a Fast Food because it has above average spending for Fresh and Frozen category. It also have a minimum spending for Detergents Paper and Delicatessen.\n",
+    "\n",
+    "Number 2 could be a Juice Shop, because it has minimum spending on everything but Fresh ctegory.\n",
+    "\n"
    ]
   },
   {
