--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -291,9 +291,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -454,23 +454,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The R^2 score for a Decision Tree Regression using the dependent variable:\nFresh is -0.92\nMilk is 0.52\nGrocery is 0.80\nFrozen is -0.65\nDetergents_Paper is 0.82\nDelicatessen is -0.43\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Make a copy of the DataFrame, using the 'drop' function to drop the given feature\n",
-    "new_data = None\n",
+    "from sklearn.cross_validation import train_test_split\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
     "\n",
-    "# TODO: Split the data into training and testing sets using the given feature as the target\n",
-    "X_train, X_test, y_train, y_test = (None, None, None, None)\n",
+    "labels = list(data)\n",
     "\n",
-    "# TODO: Create a decision tree regressor and fit it to the training set\n",
-    "regressor = None\n",
+    "print \"The R^2 score for a Decision Tree Regression using the dependent variable:\"\n",
     "\n",
-    "# TODO: Report the score of the prediction using the testing set\n",
-    "score = None"
+    "for y_label in labels:\n",
+    "    # TODO: Make a copy of the DataFrame, using the 'drop' function to drop the given feature\n",
+    "    X = data.copy()\n",
+    "    \n",
+    "    #Label to drop and use as y\n",
+    "    #y_label = 'Grocery'\n",
+    "    y = X[y_label]\n",
+    "    X.drop(y_label, axis = 1, inplace = True)\n",
+    "    \n",
+    "    #display(y.head())\n",
+    "    #display(X.head())\n",
+    "    \n",
+    "    # TODO: Split the data into training and testing sets using the given feature as the target\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=1)\n",
+    "    \n",
+    "    # TODO: Create a decision tree regressor and fit it to the training set\n",
+    "    regressor = DecisionTreeRegressor(random_state=1).fit(X_train,y_train)\n",
+    "    \n",
+    "    # TODO: Report the score of the prediction using the testing set\n",
+    "    score = regressor.score(X_test,y_test)\n",
+    "    \n",
+    "    print \"{} is {:.2f}\".format(y_label,score)"
    ]
   },
   {
