--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -572,7 +572,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "The graph above confirms"
    ]
   },
   {
