--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -574,7 +574,11 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "The graph above confirms"
+    "The graph above confirms the intuitions made on the previous analysis.\n",
+    "\n",
+    "There is a strong linear correlation between Grocery and Detergents_Paper (and of course vice versa) and a weaker linear correlation of Milk with both Grocery and Detergents_Paper. It is more evident that we could use PCA and ICA to have a better final model.\n",
+    "\n",
+    "The rest of the features are independent between each other and are normally distributed while skewed towards the origin."
    ]
   },
   {
