--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -1990,7 +1990,7 @@
     "\n",
     "There are many points classified as outliers. Anyway I would keep them precisely because they are many and we could loose precious information. If many points are classified as outliers maybe they are not real outliers.\n",
     "\n",
-    "The only point I would definitely remove is the number 75. It is the only point in the dataset that is an extremely isolated outlier for Grocery and and detergent paper (it is clearly possible to view it in the scatter matrix above)."
+    "The only point I would definitely remove is the number 75. It is the only point in the dataset that is an extremely isolated outlier for Grocery and Detergent_Paper (it is clearly possible to view it in the scatter matrix above)."
    ]
   },
   {
