--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -2064,7 +2064,24 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "The total variance explained by the first two principal components is 71.79%, and the total variance explained by the first 4 components is 93.28%.\n"
+    "The total variance explained by the first two principal components is 71.79% and the total variance explained by the first 4 components is 93.28%.\n",
+    "\n",
+    "Component analysis:\n",
+    "* First Component:\n",
+    "\t* It explains most (43.61%) of the variance by itself\n",
+    "\t* It has high an positive weights for Detergent_Paper, Grocery and Milk that is inline with the previous intuition about a strong correletion between these components\n",
+    "\n",
+    "* Second Component:\n",
+    "\t* Even if it is the second it explains a large (28.18%) part of the rest of the variance\n",
+    "\t* It is justified because it has high weights on the other three components (Fresh, Frozen and Delicatessen) and make a correlation between them\n",
+    "\n",
+    "* Third Component:\n",
+    "\t* It explains a lower but still significative (11.81%) part of the variance\n",
+    "\t* It describes the inverse proportionality of Fresh (positive significant weight) and Delicatessen (negative significant weight)\n",
+    "\n",
+    "* Fourth Component:\n",
+    "\t* It explains slightly lower variance (9.78%) than the third\n",
+    "\t* It describes the inverse proportionality of Frozen (positive significant weight) and Delicatessen (negative significant weight)\n"
    ]
   },
   {
