--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -2401,7 +2401,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "K-Means\n",
+    "* Advantages\n",
+    "\t* It is very easy to interpret the final model and the steps to get to it, thanks to the centroids\n",
+    "\t* Computational Very efficient\n",
+    "\t* It works very well on spherical clusters\n",
+    "* Disadvantages\n",
+    "\t* Not efficient on clusters that are not spherical, expecially on clusters that are overlapping\n",
+    "\t* Very sensitive to outliers\n",
+    "\t* Very sensitive to starting points, it converges to a local optimal and each time it is launched with different starting points could converge to different minima"
    ]
   },
   {
