--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -2411,7 +2411,18 @@
     "* Disadvantages\n",
     "\t* Not efficient on clusters that are not spherical, expecially on clusters that are overlapping\n",
     "\t* Very sensitive to outliers\n",
-    "\t* Very sensitive to starting points, it converges to a local optimal and each time it is launched with different starting points could converge to different minima"
+    "\t* Very sensitive to starting points, it converges to a local optimal and each time it is launched with different starting points could converge to different minima\n",
+    "\n",
+    "Gaussian Mixture Model\n",
+    "* Advantages\n",
+    "\t* Clusters are modeled as a Gaussian Distribution and each point has some probability to be in each cluster\n",
+    "\t* It works very good on overlapping clusters\n",
+    "\t* Very flexible model\n",
+    "* Disadvantages\n",
+    "\t* Computationally very expensive\n",
+    "\t* Sensitive to starting points, it converges to a local optimal\n",
+    "\n",
+    "In this case because the dataset is clearly overlapping and there are not spherical clusters, the better algorithm to use is GAussian Mixtur Model."
    ]
   },
   {
