--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -2406,7 +2406,7 @@
     "K-Means\n",
     "* Advantages\n",
     "\t* It is very easy to interpret the final model and the steps to get to it, thanks to the centroids\n",
-    "\t* Computational Very efficient\n",
+    "\t* Computationally efficient\n",
     "\t* It works very well on spherical clusters\n",
     "* Disadvantages\n",
     "\t* Not efficient on clusters that are not spherical, expecially on clusters that are overlapping\n",
@@ -2422,7 +2422,7 @@
     "\t* Computationally very expensive\n",
     "\t* Sensitive to starting points, it converges to a local optimal\n",
     "\n",
-    "In this case because the dataset is clearly overlapping and there are not spherical clusters, the better algorithm to use is GAussian Mixtur Model."
+    "In this case, because the dataset is clearly overlapping, there are not spherical clusters and we have many outliers, the better algorithm to use is Gaussian Mixture Model."
    ]
   },
   {
