--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -2443,26 +2443,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 clusters score: 0.3554\n3 clusters score: 0.3776\n4 clusters score: 0.3601\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 clusters score: 0.2508\n6 clusters score: 0.2615\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 clusters score: 0.3164\n8 clusters score: 0.2849\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9 clusters score: 0.2553\n10 clusters score: 0.2925\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Apply your clustering algorithm of choice to the reduced data \n",
-    "clusterer = None\n",
+    "from sklearn.mixture import GMM\n",
+    "from sklearn.metrics import silhouette_score\n",
     "\n",
-    "# TODO: Predict the cluster for each data point\n",
-    "preds = None\n",
+    "set_of_clusters_to_try = range(2,11)\n",
     "\n",
-    "# TODO: Find the cluster centers\n",
-    "centers = None\n",
+    "for clusters_to_try in set_of_clusters_to_try:\n",
+    "    # TODO: Apply your clustering algorithm of choice to the reduced data \n",
+    "    clusterer = GMM(n_components=clusters_to_try,random_state=5).fit(reduced_data)\n",
+    "    \n",
+    "    # TODO: Predict the cluster for each data point\n",
+    "    preds = clusterer.predict(reduced_data)\n",
+    "    \n",
+    "    # TODO: Find the cluster centers\n",
+    "    centers = clusterer.means_\n",
     "\n",
-    "# TODO: Predict the cluster for each transformed sample data point\n",
-    "sample_preds = None\n",
-    "\n",
-    "# TODO: Calculate the mean silhouette coefficient for the number of clusters chosen\n",
-    "score = None"
+    "    # TODO: Predict the cluster for each transformed sample data point\n",
+    "    sample_preds = clusterer.predict(pca_samples)\n",
+    "    \n",
+    "    # TODO: Calculate the mean silhouette coefficient for the number of clusters chosen\n",
+    "    score = silhouette_score(reduced_data,preds,random_state=5)\n",
+    "    \n",
+    "    print \"{} clusters score: {:.4f}\".format(clusters_to_try,score)"
    ]
   },
   {
@@ -2477,7 +2514,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "The best silhouette score is 0.3776 with 3 clusters."
    ]
   },
   {
