--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -2573,17 +2573,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fresh</th>\n",
+       "      <th>Milk</th>\n",
+       "      <th>Grocery</th>\n",
+       "      <th>Frozen</th>\n",
+       "      <th>Detergents_Paper</th>\n",
+       "      <th>Delicatessen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Segment 0</th>\n",
+       "      <td>2482.0</td>\n",
+       "      <td>2475.0</td>\n",
+       "      <td>3890.0</td>\n",
+       "      <td>781.0</td>\n",
+       "      <td>722.0</td>\n",
+       "      <td>375.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Segment 1</th>\n",
+       "      <td>9888.0</td>\n",
+       "      <td>1877.0</td>\n",
+       "      <td>2418.0</td>\n",
+       "      <td>2233.0</td>\n",
+       "      <td>282.0</td>\n",
+       "      <td>709.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Segment 2</th>\n",
+       "      <td>6094.0</td>\n",
+       "      <td>6621.0</td>\n",
+       "      <td>9437.0</td>\n",
+       "      <td>1360.0</td>\n",
+       "      <td>2840.0</td>\n",
+       "      <td>1203.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fresh</th>\n",
+       "      <th>Milk</th>\n",
+       "      <th>Grocery</th>\n",
+       "      <th>Frozen</th>\n",
+       "      <th>Detergents_Paper</th>\n",
+       "      <th>Delicatessen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Segment 0</th>\n",
+       "      <td>2482.0</td>\n",
+       "      <td>2475.0</td>\n",
+       "      <td>3890.0</td>\n",
+       "      <td>781.0</td>\n",
+       "      <td>722.0</td>\n",
+       "      <td>375.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Segment 1</th>\n",
+       "      <td>9888.0</td>\n",
+       "      <td>1877.0</td>\n",
+       "      <td>2418.0</td>\n",
+       "      <td>2233.0</td>\n",
+       "      <td>282.0</td>\n",
+       "      <td>709.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Segment 2</th>\n",
+       "      <td>6094.0</td>\n",
+       "      <td>6621.0</td>\n",
+       "      <td>9437.0</td>\n",
+       "      <td>1360.0</td>\n",
+       "      <td>2840.0</td>\n",
+       "      <td>1203.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 0,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# TODO: Inverse transform the centers\n",
-    "log_centers = None\n",
+    "log_centers = pca.inverse_transform(centers)\n",
     "\n",
     "# TODO: Exponentiate the centers\n",
-    "true_centers = None\n",
+    "true_centers = np.exp(log_centers)\n",
     "\n",
     "# Display the true centers\n",
     "segments = ['Segment {}'.format(i) for i in range(0,len(centers))]\n",
@@ -2607,7 +2707,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "Segment 0\n",
+    "* It has very low spending in everything but Milk and Grocery\n",
+    "* Detergents_paper are not so low and it means they could be used to clean a public place where you can eat\n",
+    "* It could be a coffe bar or fast-food\n",
+    "\n",
+    "Segment 1 \n",
+    "* It has very low spending in everything but Fresh and Frozen\n",
+    "* It could be a retailer specialized in fish, meat, juices or greengrocery\n",
+    "\n",
+    "Segment 2\n",
+    "* It has an average high spending in all the categories\n",
+    "* It could be a supermarket, a mini-market or a cornershop"
    ]
   },
   {
@@ -2624,11 +2737,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample point 0 predicted to be in Cluster 2\nSample point 1 predicted to be in Cluster 2\nSample point 2 predicted to be in Cluster 1\n"
+     ]
+    }
+   ],
    "source": [
     "# Display the predictions\n",
     "for i, pred in enumerate(sample_preds):\n",
@@ -2641,7 +2762,7 @@
     "collapsed": false
    },
    "source": [
-    "**Answer:**"
+    "**Answer:**\n"
    ]
   },
   {
