--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -431,7 +431,7 @@
     "\n",
     "Number 0 could be a Supermarket because it has above average and very high spending for Fresh, Milk, Grocery, Detergents Paper and Delicatessen category.\n",
     "\n",
-    "Number 1 could be a Fast Food because it has above average spending for Fresh and Frozen category. It also have a minimum spending for Detergents Paper and Delicatessen.\n",
+    "Number 1 could be a Greengrocery because it has above average spending for Fresh and Frozen category. It also have an average spending for Grocery.\n",
     "\n",
     "Number 2 could be a Juice Shop, because it has minimum spending on everything but Fresh ctegory.\n",
     "\n"
@@ -2762,7 +2762,11 @@
     "collapsed": false
    },
    "source": [
-    "**Answer:**\n"
+    "**Answer:**\n",
+    "\n",
+    "The sample point 0 was supposed to be a Supermarket (segment 2) by my previous intuition and it is predicted as it (segment 2).\n",
+    "\n",
+    "The sample point 1 was supposed to be a Fast Food (segment 0) but it is predicted to be in the supermarket segment (segment 2), anyway it is a point on the border between \n"
    ]
   },
   {
