--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -2716,7 +2716,7 @@
     "\n",
     "Segment 1 \n",
     "* It has very low spending in everything but Fresh and Frozen\n",
-    "* It could be a retailer specialized in fish, meat, juices or greengrocery\n",
+    "* It could be a retailer specialized in fish, meat, juice shop or greengrocery\n",
     "\n",
     "Segment 2\n",
     "* It has an average high spending in all the categories\n",
@@ -2764,9 +2764,12 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "The sample point 0 was supposed to be a Supermarket (segment 2) by my previous intuition and it is predicted as it (segment 2).\n",
+    "By my previous intuitions:\n",
+    "* Sample point 0 was supposed to be a Supermarket (segment 2) and it is predicted correctly (segment 2).\n",
     "\n",
-    "The sample point 1 was supposed to be a Fast Food (segment 0) but it is predicted to be in the supermarket segment (segment 2), anyway it is a point on the border between \n"
+    "* Sample point 1 was supposed to be a Greengrocery (segment 1) but it is predicted to be in the supermarket segment (segment 2). However it is a point right on the border between segment 1 and segment 2, so it means that has some aspects of both the segments. Maybe it could be a large Greengrocery, with high volume of sales and purchasings, that is why it is classified as a supermarket.\n",
+    "\n",
+    "* Sample point 1 was supposed to be a Juice shop (segment 1) and it is predicted correctly (segment 1)\n"
    ]
   },
   {
