--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -2516,6 +2516,24 @@
    "source": [
     "**Answer:**\n",
     "\n",
+    "2 clusters score: 0.3554\n",
+    "\n",
+    "3 clusters score: 0.3776\n",
+    "\n",
+    "4 clusters score: 0.3601\n",
+    "\n",
+    "5 clusters score: 0.2508\n",
+    "\n",
+    "6 clusters score: 0.2615\n",
+    "\n",
+    "7 clusters score: 0.3164\n",
+    "\n",
+    "8 clusters score: 0.2849\n",
+    "\n",
+    "9 clusters score: 0.2553\n",
+    "\n",
+    "10 clusters score: 0.2925\n",
+    "\n",
     "The best silhouette score is 0.3776 with 3 clusters."
    ]
   },
