--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -2829,9 +2829,9 @@
     "* If there is:\n",
     "\t* Try to take the cluster and change the delivery date for half of the customers in the cluster\n",
     "\t* Measure again the customer satisfaction\n",
-    "\t* Based on the measure decide if apply the new conditions to all of the members or get back to the old delivery date\n",
+    "\t* Based on the measure decide if apply the new conditions to all of the cluster's members or get back to the old delivery date\n",
     "* If there is no high customer satisfaction in a cluster:\n",
-    "\t* Use a supervised machine learning algorithm to create a model to predict the custome satisfaction\n",
+    "\t* Use a supervised machine learning algorithm to create a model to predict the customer satisfaction\n",
     "\t* Use as dependent variable (y) the customer satisfaction\n",
     "\t* Use the model to change the delivery date only on the customers that will positively react\n",
     "\n",
@@ -2854,7 +2854,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "It is possible to use a supervised classifier (such as logistic regression, SVM, Naives Bayes Classifier, etc..) using as features (X) the product spending and as target variable (y) the customer segment."
    ]
   },
   {
