--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -2734,7 +2734,7 @@
     "\n",
     "Segment 1 \n",
     "* It has very low spending in everything but Fresh and Frozen\n",
-    "* It could be a retailer specialized in fish, meat, juice shop or greengrocery\n",
+    "* It could be a restarurant o a retailer specialized in fish, meat, juice shop or greengrocery\n",
     "\n",
     "Segment 2\n",
     "* It has an average high spending in all the categories\n",
@@ -2906,7 +2906,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "If we do not consider segment 0:\n",
+    "* the retail clients are ovelapping the segment 2 (supermarket, a mini-market or a cornershop)\n",
+    "* the Hotel/Restaurants/Cafes are ovelapping the segment 1 (restarurant o a retailer specialized in fish, meat, juice shop or greengrocery)\n",
+    "This is consistent with the model created to predict the segment.\n",
+    "\n",
+    "Anyway the model found an additional segment (segment 0) that could divide better the dataset, this segment was classified as coffe bar or fast-food and it could include also small retailers (such as small corner-shops). This segment contains all the channels with a general low spending"
    ]
   },
   {
