--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -2909,11 +2909,12 @@
     "**Answer:**\n",
     "\n",
     "If we do not consider segment 0:\n",
-    "* the retail clients are ovelapping the segment 2 (supermarket, a mini-market or a cornershop)\n",
-    "* the Hotel/Restaurants/Cafes are ovelapping the segment 1 (restarurant o a retailer specialized in fish, meat, juice shop or greengrocery)\n",
+    "* the retail clients are ovelapping segment 2 (supermarket, mini-market or cornershop)\n",
+    "* the Hotel/Restaurants/Cafes are ovelapping segment 1 (restarurant or retailer specialized in fish, meat, juice shop or greengrocery)\n",
+    "\n",
     "This is consistent with the model created to predict the segment.\n",
     "\n",
-    "Anyway the model found an additional segment (segment 0) that could divide better the dataset, this segment was classified as coffe bar or fast-food and it could include also small retailers (such as small corner-shops). This segment contains all the channels with a general low spending"
+    "Anyway the model found an additional segment (segment 0) that could divide better the dataset, this segment was classified as coffe bar or fast-food and it could include also small retailers (such as small corner-shops). This segment contains all the channels with a general low spending."
    ]
   },
   {
