--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -571,7 +571,7 @@
     "\n",
     "The graph above confirms the intuitions made on the previous analysis.\n",
     "\n",
-    "There is a strong linear correlation between Grocery and Detergents_Paper (and of course vice versa) and a weaker linear correlation of Milk with both Grocery and Detergents_Paper. It is more evident that we could use PCA and ICA to have a better final model.\n",
+    "There is a strong linear correlation between Grocery and Detergents_Paper (and of course vice versa) and a weaker linear correlation of Milk with both Grocery and Detergents_Paper. It is even more evident that we could use PCA or ICA to have a better final model.\n",
     "\n",
     "The rest of the features are independent between each other and are normally distributed while skewed towards the origin."
    ]
