--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -1949,6 +1949,9 @@
     }
    ],
    "source": [
+    "from collections import Counter\n",
+    "c = Counter()\n",
+    "\n",
     "# For each feature find the data points with extreme high or low values\n",
     "for feature in log_data.keys():\n",
     "    \n",
@@ -1984,11 +1987,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('a', 4), ('c', 2), ('b', 2)]\n"
+     ]
+    }
+   ],
    "source": [
-    ""
+    "from collections import Counter\n",
+    "c = Counter()\n",
+    "a = [\"a\",\"b\",\"a\",\"b\",\"c\"]\n",
+    "b = [\"a\",\"a\",\"c\"]\n",
+    "c.update(a)\n",
+    "c.update(b)\n",
+    "print c.most_common()"
    ]
   },
   {
