--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -1946,11 +1946,18 @@
      "execution_count": 0,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Common outliers with the number of feature of which they are outliers\n[(154, 3), (128, 2), (65, 2), (66, 2), (75, 2), (193, 1), (264, 1), (137, 1), (142, 1), (145, 1), (412, 1), (285, 1), (161, 1), (420, 1), (38, 1), (171, 1), (429, 1), (175, 1), (304, 1), (305, 1), (439, 1), (184, 1), (57, 1), (187, 1), (203, 1), (325, 1), (289, 1), (81, 1), (338, 1), (86, 1), (343, 1), (218, 1), (95, 1), (96, 1), (353, 1), (98, 1), (355, 1), (356, 1), (357, 1), (233, 1), (109, 1), (183, 1)]\n"
+     ]
     }
    ],
    "source": [
     "from collections import Counter\n",
-    "c = Counter() \n",
+    "c = Counter()\n",
     "\n",
     "# For each feature find the data points with extreme high or low values\n",
     "for feature in log_data.keys():\n",
@@ -1966,7 +1973,13 @@
     "    \n",
     "    # Display the outliers\n",
     "    print \"Data points considered outliers for the feature '{}':\".format(feature)\n",
-    "    display(log_data[~((log_data[feature] >= Q1 - step) & (log_data[feature] <= Q3 + step))])\n",
+    "    outliers_matrix = log_data[~((log_data[feature] >= Q1 - step) & (log_data[feature] <= Q3 + step))]\n",
+    "    display(outliers_matrix)\n",
+    "    c.update(outliers_matrix.index.tolist())\n",
+    "\n",
+    "# Display the common outliers with the number of feature of which they are outliers\n",
+    "print \"Common outliers with the number of feature of which they are outliers\"\n",
+    "print c.most_common()\n",
     "    \n",
     "# OPTIONAL: Select the indices for data points you wish to remove\n",
     "outliers  = [75]\n",
