--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -2790,7 +2790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -2799,7 +2799,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sample point 0 predicted to be in Cluster 2\nSample point 1 predicted to be in Cluster 2\nSample point 2 predicted to be in Cluster 1\n"
+      "Sample point 0 predicted to be in Cluster 1\nSample point 1 predicted to be in Cluster 0\nSample point 2 predicted to be in Cluster 0\n"
      ]
     }
    ],
@@ -2818,11 +2818,11 @@
     "**Answer:**\n",
     "\n",
     "By my previous intuitions:\n",
-    "* Sample point 0 was supposed to be a Supermarket (segment 2) and it is predicted correctly (segment 2).\n",
+    "* Sample point 0 was supposed to be a Supermarket (segment 1) and it is predicted correctly (segment 1).\n",
     "\n",
-    "* Sample point 1 was supposed to be a Greengrocery (segment 1) but it is predicted to be in the supermarket segment (segment 2). However it is a point right on the border between segment 1 and segment 2, so it means that has some aspects of both the segments. Maybe it could be a large Greengrocery, with high volume of sales and purchasings, that is why it is classified as a supermarket.\n",
+    "* Sample point 1 was supposed to be a Greengrocery (segment 1) but it is predicted to be in the restaurant segment (segment 0). However it is a point right on the border between segment 1 and segment 2, so it means that has some aspects of both the segments. It could be missclassified because of the large spendinng in Fresh (much more above the average).\n",
     "\n",
-    "* Sample point 1 was supposed to be a Juice shop (segment 1) and it is predicted correctly (segment 1)\n"
+    "* Sample point 2 was supposed to be a Juice shop (segment 0) and it is predicted correctly (segment 0) in the coffe bar and fast-food category.\n"
    ]
   },
   {
