--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -2790,7 +2790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -2799,14 +2799,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sample point 0 predicted to be in Cluster 1\nSample point 1 predicted to be in Cluster 0\nSample point 2 predicted to be in Cluster 0\n"
+      "Sample point 0 predicted to be in Cluster 1\nThe distance between sample point 0 and center of cluster 1:\nFresh               11801.0\nMilk                39850.0\nGrocery             83225.0\nFrozen                -10.0\nDetergents_Paper    37781.0\nDelicatessen         1999.0\ndtype: float64\nSample point 1 predicted to be in Cluster 0\nThe distance between sample point 1 and center of cluster 0:\nFresh               67425.0\nMilk                 1421.0\nGrocery              4413.0\nFrozen              14480.0\nDetergents_Paper      441.0\nDelicatessen          206.0\ndtype: float64\nSample point 2 predicted to be in Cluster 0\nThe distance between sample point 2 and center of cluster 0:\nFresh              -2439.0\nMilk               -1272.0\nGrocery            -1739.0\nFrozen             -1180.0\nDetergents_Paper     -49.0\nDelicatessen        -427.0\ndtype: float64\n"
      ]
     }
    ],
    "source": [
     "# Display the predictions\n",
     "for i, pred in enumerate(sample_preds):\n",
-    "    print \"Sample point\", i, \"predicted to be in Cluster\", pred"
+    "    print \"Sample point\", i, \"predicted to be in Cluster\", pred\n",
+    "    print 'The distance between sample point {} and center of cluster {}:'.format(i, pred)\n",
+    "    print (samples.iloc[i] - true_centers.iloc[pred])"
    ]
   },
   {
@@ -2820,7 +2822,7 @@
     "By my previous intuitions:\n",
     "* Sample point 0 was supposed to be a Supermarket (segment 1) and it is predicted correctly (segment 1).\n",
     "\n",
-    "* Sample point 1 was supposed to be a Greengrocery (segment 1) but it is predicted to be in the restaurant segment (segment 0). However it is a point right on the border between segment 1 and segment 2, so it means that has some aspects of both the segments. It could be missclassified because of the large spendinng in Fresh (much more above the average).\n",
+    "* Sample point 1 was supposed to be a Greengrocery (segment 1) but it is predicted to be in the restaurant segment (segment 0). However it is a point right on the border between segment 1 and segment 2, so it means that has some aspects of both the segments. It could be missclassified because of the large spending in Fresh (much more above the average).\n",
     "\n",
     "* Sample point 2 was supposed to be a Juice shop (segment 0) and it is predicted correctly (segment 0) in the coffe bar and fast-food category.\n"
    ]
@@ -2944,7 +2946,7 @@
     "**Answer:**\n",
     "\n",
     "* The retail clients are mostly ovelapping segment 1 (supermarket, mini-market or cornershop)\n",
-    "* The Hotel/Restaurants/Cafes are ovelapping segment 0 (restarurant, coffe bar or fast food)\n",
+    "* The Hotel/Restaurants/Cafes are mostly ovelapping segment 0 (restarurant, coffe bar or fast food)\n",
     "\n",
     "This is consistent with the model created to predict the segment."
    ]
