--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -293,7 +293,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -2006,7 +2006,14 @@
     "\n",
     "There are many points classified as outliers. In general I would keep them precisely because they are many and we could loose precious information. If many points are classified as outliers maybe they are not real outliers.\n",
     "\n",
-    "We could take a subset of the outliers. In fact, we take out the outliers for more than one feature, the points: 154, 128, 65, 66, 75"
+    "We could take a subset of the outliers. In fact, we take out the outliers for more than one feature, the points: 154, 128, 65, 66, 75\n",
+    "\n",
+    "We should take in consideration that:\n",
+    "* These points are in an area of low density for two feature (since we have just 6 features, it is 33% of the feaure) or more\n",
+    "* The weight of these outliers is considerably important compared to the other outliers\n",
+    "* A clustering algorithm is sensitive to outliers\n",
+    "\n",
+    "That is why these outliers could considerably skew our final clustering model and it is better to remove them from the fitting process.\n"
    ]
   },
   {
@@ -2080,23 +2087,23 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "The total variance explained by the first two principal components is 71.79% and the total variance explained by the first 4 components is 93.28%.\n",
+    "The total variance explained by the first two principal components is 70.68% and the total variance explained by the first 4 components is 93.11%.\n",
     "\n",
     "Component analysis:\n",
     "* First Component:\n",
-    "\t* It explains most (43.61%) of the variance by itself\n",
+    "\t* It explains most (44.30%) of the variance by itself\n",
     "\t* It has high an positive weights for Detergent_Paper, Grocery and Milk that is inline with the previous intuition about a strong correletion between these components\n",
     "\n",
     "* Second Component:\n",
-    "\t* Even if it is the second it explains a large (28.18%) part of the rest of the variance\n",
+    "\t* Even if it is the second it explains a large (26.38%) part of the rest of the variance\n",
     "\t* It is justified because it has high weights on the other three components (Fresh, Frozen and Delicatessen) and make a correlation between them\n",
     "\n",
     "* Third Component:\n",
-    "\t* It explains a lower but still significative (11.81%) part of the variance\n",
+    "\t* It explains a lower but still significative (12.31%) part of the variance\n",
     "\t* It describes the inverse proportionality of Fresh (positive significant weight) and Delicatessen (negative significant weight)\n",
     "\n",
     "* Fourth Component:\n",
-    "\t* It explains slightly lower variance (9.78%) than the third\n",
+    "\t* It explains slightly lower variance (10.12%) than the third\n",
     "\t* It describes the inverse proportionality of Frozen (positive significant weight) and Delicatessen (negative significant weight)\n"
    ]
   },
